--- a/index.html
+++ b/index.html
@@ -8,7 +8,44 @@
     </head>
 
     <body>
-        
+        <h1>My Library</h1>
+
+        <div class="container">
+
+            <div class="row" >
+                <div class="box">
+                    <h2>Available</h2>
+                    <div class="book" id="books_1">
+                        <h5>Livre 1</h5>
+                        <p class="author">Author</p>
+                        <p class="id">ID</p>
+                        <p class="price">Price</p>
+                        <button class="delete">Delete</button>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <h2>Sold</h2>
+                    <div class="book">
+                        <h5>Livre 2</h5>
+                        <p class="author">Author</p>
+                        <p class="id">ID</p>
+                        <p class="price">Price</p>
+                        <button class="delete">Delete</button>
+                    </div>
+
+                    <div class="book">
+                        <h5>Livre 3</h5>
+                        <p class="author">Author</p>
+                        <p class="id">ID</p>
+                        <p class="price">Price</p>
+                        <button class="delete">Delete</button>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
 
         <script src="./script.js"></script>
     </body>
